# yolo_capture

./: CMakeLists.txt  LICENSE  README.md
data/: coco.data
include/: detecter.hpp
src/: detecter.cpp  main.cpp
